# ferroc-sgx-test

./: Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
src/: alloc.rs  alloc2.rs  alloc_expanded.rs  main.rs  sgx.rs
src/sys/: mod.rs  sgx.rs  unix.rs
